welcome.lessons.welcome.variables.Variables.scala.error
Variables:13: error: illegal start of simple expression
if (dejaFait!=nbPas)
^Variables:14: error: ')' expected but ';' found.
  recule;
        ^